@@ -1,3 +1,7 @@
+Tue Apr 29 10:21:38 2014  Kazuki Tsujimoto  <kazuki@callcc.net>
+
+	* parse.y (symbols_i): like r45492, call rb_gc_resurrect().
+
 Tue Apr 29 04:29:05 2014  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
 
 	* file.c (HAVE_STRUCT_STATFS_T_F_FSTYPENAME): Add new macro for
